// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadingSpinner snapshots with all props 1`] = `
<div
  className="LoadingSpinner"
  style={
    Object {
      "left": "50%",
      "margin": "-100px 0 0 -100px",
      "position": "absolute",
      "top": "50%",
      "width": "200px",
    }
  }
>
  <svg
    className="circular"
    viewBox="25 25 50 50"
  >
    <circle
      className="path"
      cx="50"
      cy="50"
      fill="none"
      r="20"
      strokeMiterlimit="10"
      strokeWidth={4}
    />
  </svg>
</div>
`;

exports[`LoadingSpinner snapshots with just label prop 1`] = `
<div
  className="LoadingSpinner"
  style={
    Object {
      "width": "100px",
    }
  }
>
  <svg
    className="circular"
    viewBox="25 25 50 50"
  >
    <circle
      className="path"
      cx="50"
      cy="50"
      fill="none"
      r="20"
      strokeMiterlimit="10"
      strokeWidth={2}
    />
  </svg>
</div>
`;
